# Game

./: .gitignore  CMakeLists.txt
Zelda/: .gitignore  CMakeLists.txt  README.md
Zelda/assets/: CHECKLIST.md  README.md
Zelda/docs/: ENGINE_MANUAL.md
Zelda/scripts/: setup_test_assets.ps1
Zelda/src/: main.cpp
Zelda/src/animation/: Animation.cpp  Animation.h  AnimationManager.cpp  AnimationManager.h
Zelda/src/audio/: AudioManager.cpp  AudioManager.h
Zelda/src/combat/: CombatSystem.cpp  CombatSystem.h  Hitbox.h
Zelda/src/core/: CombatFeel.cpp  CombatFeel.h  Constants.h  Game.cpp  GameSession.cpp  GameSession.h  GameState.h  Menu.cpp  Menu.h  Pause.cpp  Pause.h
Zelda/src/economy/: EconomySystem.cpp  EconomySystem.h  Shop.cpp  Shop.h  ShopItem.h
Zelda/src/entities/: Player.cpp  Player.h
Zelda/src/entity/: Coin.cpp  Coin.h  Door.cpp  Door.h  Enemy.cpp  Enemy.h  Entity.cpp  Heart.h  Key.h  Player.cpp  Player.h
Zelda/src/entity/base/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
Zelda/src/entity/enemy/: BatEnemy.cpp  BatEnemy.h  Enemy.cpp  Enemy.h  EnemyAI.cpp  EnemyAI.h  EnemyState.h  NarutoAttack.h  NarutoBoss.cpp  NarutoBoss.h  NarutoCloneEnemy.cpp  NarutoCloneEnemy.h  NarutoProjectile.cpp  NarutoProjectile.h  SkeletonEnemy.cpp  SkeletonEnemy.h  SlimeEnemy.cpp  SlimeEnemy.h  SummonerEnemy.cpp  SummonerEnemy.h
Zelda/src/entity/items/: Chest.cpp  Chest.h  Coin.cpp  Coin.h  Door.cpp  Door.h  Heart.cpp  Heart.h  Key.cpp  Key.h
Zelda/src/entity/npc/: Shopkeeper.cpp  Shopkeeper.h
Zelda/src/entity/player/: Direction.h  Player.cpp  Player.h  PlayerState.h  PlayerStats.cpp  PlayerStats.h
Zelda/src/input/: Input.cpp  Input.h
Zelda/src/interaction/: EventBus.cpp  EventBus.h  InteractionSystem.cpp  InteractionSystem.h
Zelda/src/map/: Map.cpp  Map.h
Zelda/src/movement/: CollisionSystem.cpp  CollisionSystem.h  EnemyMovement.cpp  EnemyMovement.h  Movement.cpp  Movement.h  MovementSystem.cpp  MovementSystem.h  PlayerMovement.cpp  PlayerMovement.h
Zelda/src/procedural/: DungeonGenerator.cpp  DungeonGenerator.h  Room.cpp  Room.h  RoomTemplates.cpp  RoomTemplates.h  RoomType.h  World.cpp  World.h
Zelda/src/render/: Camera.cpp  Camera.h  DirectionalEnemyAnimator.cpp  DirectionalEnemyAnimator.h  EnemyAnimator.cpp  EnemyAnimator.h  EntityRenderer.cpp  EntityRenderer.h  NarutoRenderer.cpp  NarutoRenderer.h  PlayerRenderer.cpp  PlayerRenderer.h  SkeletonRenderer.cpp  SkeletonRenderer.h  TextureCache.cpp  TextureCache.h  TilemapRenderer.cpp  TilemapRenderer.h
Zelda/src/save/: HighScore.cpp  HighScore.h  RunScoreTracker.cpp  RunScoreTracker.h  SaveSystem.cpp  SaveSystem.h
Zelda/src/threads/: AsyncSemaphore.cpp  AsyncSemaphore.h  JobQueue.cpp  JobQueue.h  ThreadPool.cpp  ThreadPool.h
Zelda/src/ui/: DamageNumbers.cpp  DamageNumbers.h  GameScreens.cpp  GameScreens.h  HUD.cpp  HUD.h  Menu.cpp  Menu.h  Minimap.cpp  Minimap.h  ShopUI.cpp  ShopUI.h
Zelda/src/ui/menu/: ControlsScreen.cpp  ControlsScreen.h  InstructionsScreen.cpp  InstructionsScreen.h  MainMenu.cpp  MainMenu.h  MenuScreenBase.cpp  MenuScreenBase.h  NameEntryScreen.cpp  NameEntryScreen.h  StatisticsScreen.cpp  StatisticsScreen.h
Zelda/src/utils/: AssetPaths.cpp  AssetPaths.h  FontLoader.cpp  FontLoader.h  MathUtils.h  SpriteResolver.h  Timer.h
